# agent-control-surface

./: .gitignore  README.md  RUNBOOK.md  pyproject.toml
docs/: README.md  acs-runbook.md  blaupause.md  publish.md
panel/: __init__.py  app.py  logging.py  ops.py  repos.py  runner.py
panel/templates/: index.html
scripts/: benchmark_logging.py  install-user-service.sh
systemd/: agent-control-surface.service  jules-panel.service
tests/: test_error_kinds.py  test_git_health.py  test_git_state.py  test_limits.py  test_logging.py  test_logging_file_logger.py  test_models.py  test_ops.py  test_publish.py  test_publish_remote_protocol.py  test_redaction_memory.py  test_ui_error_formatting.py  test_ui_repo_guard.py  test_validation.py
