[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jules-panel"
version = "0.1.0"
description = "Local-only web UI for Jules sessions and safe git workflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "jinja2>=3.1.4",
]

[project.scripts]
jules-panel = "panel.app:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["panel*"]
exclude = ["systemd*", "scripts*", "tests*", "docs*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
